@startuml
'https://plantuml.com/class-diagram

hide empty members
interface MinigameManager
class MinigameManagerImpl implements MinigameManager{
    Minigame currentMinigame
    +setCurrentMinigame()
    +setMinigameDifficulty()
    +notifyUserAction()
}
abstract class Minigame
class BenchStrategy implements Minigame{

}
class LatStrategy implements Minigame
class SquatStrategy implements Minigame
class InteractionManagerImpl{
    +minigameInteraction()
}

enum MinigameType{
    BENCH
    LAT
    SQUAT
}

MinigameManagerImpl ..* MinigameType
InteractionManagerImpl ..* MinigameType
MinigameManagerImpl --* Minigame
InteractionManagerImpl --* MinigameManagerImpl
@enduml